# zirconia

./: .cproject  .gitignore  .mxproject  .project  license.txt  readme.md  zilconia_demo.elf.launch  zilconia_demo.ioc
Debug/Src/: battery.su  communication.su  encoder.su  gpio.su  ir_sensor.su  main.su  motor.su  spi.su  tim.su
Inc/: main.h
Src/: ICM20648_Register.h  adc.c  dma.c  encoder.c  gpio.c  imu.c  interrupt.c  ir_sensor.c  main.c  module_test.c  motor.c  spi.c  stm32f4xx_it.c  tim.c
hardware/: Zirconia-all-pos.csv  Zirconia-all-pos.xlsx  ZirconiaSTL_v.2.0.stl  Zirconia_BOM_PCBGOGO.xlsx  Zirconia_BOM_fusionPCB.xlsx  Zirconia_v.2.0 部品リスト.xlsx  マウス部品リスト.xlsx
hardware/Zirconia_v.2.0/: ST-LINK Board.kicad_sch  Zirconia_v.2.0.kicad_pcb  Zirconia_v.2.0.kicad_prl  Zirconia_v.2.0.kicad_pro  Zirconia_v.2.0.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  zirconia.kicad_prl
hardware/Zirconia_v.2.0/DRV8836DSSR/: DRV8836DSSR.kicad_sym  DRV8836DSSR.lib
hardware/Zirconia_v.2.0/ICM-42688-P/: ICM-42688-P.kicad_mod  ICM-42688-P.kicad_sym  ICM-42688-P.step  ICM-42688-P_handsoldering.kicad_mod
hardware/Zirconia_v.2.0/IFSC-1515AH-01/: IFSC-1515AH-01.kicad_sym  IND_IFSC_1515AH_VIS.step
hardware/Zirconia_v.2.0/KMR211GLFS/: KMR211GLFS.kicad_sym  KMR2xxG_CNK.kicad_mod  KMR2xxNG_LFS.kicad_mod
hardware/Zirconia_v.2.0/LTC4054LES5-4.2/: LTC4054LES5-4.2.kicad_sym
hardware/Zirconia_v.2.0/LTR-4206E/: LTR-4206E.stp  LTR-4206E_Reverse.stp
hardware/Zirconia_v.2.0/MA302GQ-P/: MA302GQ-P.kicad_sym  QFN-3x3_MA302_MNP.step
hardware/Zirconia_v.2.0/OSI5FU3A11C/: OSI5FU3A11C.stp  OSI5FU3A11C_Reverse.stp
hardware/gerber/: Zirconia.drl  Zirconia.gbl  Zirconia.gbo  Zirconia.gbs  Zirconia.gm1  Zirconia.gtl  Zirconia.gto  Zirconia.gts
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
software/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  README  STM32F411CEUX_FLASH.ld  STM32F413CHUX_FLASH.ld  compile_flags.txt  zilconia_demo.ioc  zilconia_sample.ioc  zirconia_v.2.0 Debug.launch  zirconia_v.2.0.ioc
software/.metadata/: version.ini
software/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
software/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
software/.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
software/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
software/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
software/Core/: CMakeLists.txt
software/Core/Inc/: index.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
software/Core/Src/: adc.c  communicate.c  dma.c  encoder.c  gpio.c  imu.c  interrupt.c  ir_sensor.c  main.c  module_test.c  motor.c  spi.c  stm32f4xx_it.c  syscalls.c  tim.c  usart.c
software/Debug/: makefile  objects.list  sources.mk  zilconia_demo.elf  zilconia_demo.hex  zilconia_demo.list  zilconia_demo.map  zilconia_sample.elf  zilconia_sample.hex  zilconia_sample.list  zilconia_sample.map  zirconia_v.2.0.elf  zirconia_v.2.0.hex  zirconia_v.2.0.list  zirconia_v.2.0.map
software/Debug/Core/Src/: adc.cyclo  adc.d  adc.su  battery.d  communicate.d  communicate.su  dma.d  encoder.d  encoder.su  gpio.d  imu.d  imu.su  interrupt.d  interrupt.su  ir_sensor.d  ir_sensor.su  main.cyclo  main.d  main.su  module_test.d  module_test.su  motor.d  motor.su  spi.cyclo  spi.d  spi.su  stm32f4xx_hal_msp.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  syscalls.su  system_stm32f4xx.d  tim.cyclo  tim.d  tim.su  usart.cyclo  usart.d  usart.su
software/Debug/Core/Startup/: subdir.mk
software/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  subdir.mk
software/Debug/Module/Src/: battery.cyclo  battery.d  battery.su  communicate.cyclo  communicate.d  communicate.su  encoder.cyclo  encoder.d  encoder.su  flash.cyclo  flash.d  flash.su  imu.cyclo  imu.d  imu.su  interrupt.cyclo  interrupt.d  interrupt.su  ir_sensor.cyclo  ir_sensor.d  ir_sensor.su  module_test.cyclo  module_test.d  module_test.su  motor.cyclo  motor.d  motor.su  myshell.cyclo  myshell.d  myshell.su  subdir.mk
software/Debug/Src/: adc.su  imu.su  interrupt.su  module_test.su  stm32f4xx_it.su  usart.su
software/Drivers/: CMakeLists.txt
software/Inc/: index.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
software/Module/: CMakeLists.txt
software/Module/Inc/: ICM20648_Register.h  ICM42688P_Register.h  index.h  module_index.h
software/Module/Src/: battery.c  communicate.c  encoder.c  flash.c  imu.c  interrupt.c  ir_sensor.c  module_test.c  motor.c  myshell.c  pid_control.c
software/Src/: ICM20648_Register.h  adc.c  battery.c  communication.c  dma.c  interrupt.c  ir_sensor.c  main.c  module_test.c  motor.c  stm32f4xx_it.c  tim.c  usart.c
(+30 files in other folders)
